# OpenYap

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  NATIVE_AUDIO_PLAN.md  README.md  REVIEW_REPORT.md  build.gradle.kts  gradle.properties  koin-di-refactor.md  settings.gradle.kts
.github/workflows/: build-dll.yml
composeApp/: build.gradle.kts
composeApp/resources/windows/: main.wxs
composeApp/src/commonMain/composeResources/drawable/: ic_app_logo.xml
composeApp/src/jvmMain/composeResources/drawable/: ic_app_logo.xml
composeApp/src/jvmMain/kotlin/com/example/openyap/: Main.kt
composeApp/src/jvmMain/kotlin/com/openyap/: main.kt
composeApp/src/jvmMain/kotlin/com/openyap/di/: ComposeAppModule.kt
composeApp/src/jvmMain/kotlin/com/openyap/platform/: ComposeOverlayController.kt  ComposeOverlayWindow.kt
docs/architecture/: codebase-connectivity.md
docs/review/: pr-review-findings.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
native/: CMakeLists.txt  CMakePresets.json  build-dll.ps1  stage-dll.ps1
native/src/: audio_capture.cpp  audio_capture.h  audio_encoder.cpp  audio_encoder.h  hotkey_manager.cpp  hotkey_manager.h  jni_audio_bridge.cpp  noise_suppressor.cpp  noise_suppressor.h  openyap_native.cpp  openyap_native.h  paste_automation.cpp  paste_automation.h  vad.cpp  vad.h
shared/: build.gradle.kts
shared/schemas/com.openyap.database.OpenYapDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
shared/src/commonMain/kotlin/com/openyap/: Platform.kt
shared/src/commonMain/kotlin/com/openyap/database/: AppPromptDao.kt  AppPromptEntity.kt  AppSettingsDao.kt  AppSettingsEntity.kt  AppToneDao.kt  AppToneEntity.kt  DictionaryEntryDao.kt  DictionaryEntryEntity.kt  EntityMappers.kt  OpenYapDatabase.kt  RecordingEntryDao.kt  RecordingEntryEntity.kt  UserProfileDao.kt  UserProfileEntity.kt
shared/src/commonMain/kotlin/com/openyap/model/: AppSettings.kt  AudioDevice.kt  DictionaryEntry.kt  HotkeyConfig.kt  InstalledApp.kt  OverlayState.kt  PermissionStatus.kt  RecordingEntry.kt  RecordingState.kt  UserProfile.kt
shared/src/commonMain/kotlin/com/openyap/platform/: AppDataResetter.kt  AppEnumerator.kt  AudioPipelineConfig.kt  AudioRecorder.kt  AudioRecorderDiagnostics.kt  FileOperations.kt  ForegroundAppDetector.kt  HotkeyDisplayFormatter.kt  HotkeyManager.kt  (+7 more)
specs/001-native-audio-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-native-audio-pipeline/checklists/: requirements.md
specs/001-native-audio-pipeline/contracts/: gemini-audio-contract.md  native-dll-api.md
(+77 files in other folders)
